runtime/Gaffer.Runtime.Tests/snapshots/ErrorTests.InvalidProjectionError_parse_error_with_location.verified.txt
Failed to compile projection

error: Unexpected identifier 'is' (<anonymous>:1:6)
    ┌─ 1:6
    │
  1 │ this is not valid {{{{
    │      ^ Unexpected identifier 'is' (<anonymous>:1:6)
    │
